--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ashthornton/asscroll": "^2.0.2",
+    "@react-three/drei": "^7.5.0",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-plugin-glsl": "^1.0.0",
+    "glslify": "^7.1.1",
+    "gsap": "^3.7.1",
+    "leva": "^0.9.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.38.0",
+    "three": "^0.132.2",
+    "web-vitals": "^1.0.1cls"
   },
   "scripts": {
     "start": "react-scripts start",
